--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 
       <!--Imagem e texto-->
       <div id="row1" class="row">
-        <img src="/img/solar.png" class="img-fluid" alt="Imagem responsiva" style="width:100%; border:0;">
+        <img src="/img/Solar.png" class="img-fluid" alt="Imagem responsiva" style="width:100%; border:0;">
         <div class="centered"><!--texto da imagem--></div>
       </div>
 
