--- a/Index.html
+++ b/Index.html
@@ -30,83 +30,56 @@
             <div class="row">
               <div class="col-md-6 col-12">
                 <label for="gasto">Qual o seu gasto com conta de luz?</label><br>
-                <input type="text" id="gasto">
+                <input type="text" name="gasto" id="gasto">
               </div>
               <div class="col-md-6 col-12">
                 <label for="cep">CEP</label><br>
-                <input type="text" id="cep">
+                <input type="text" name="cep" id="cep">
               </div>
             </div>
             <!--Linha 2-->
             <div class="row">
               <div class="col">
-                <div class="row">
-                  <div class="col">Endereço</div>
-                </div>
-                <div class="row">
-                  <div class="col"><!--input--></div>
-                </div>
+                <label for="add">Endereço</label><br>
+                <input type="text" name="add" id="add"> 
               </div>
             </div>
             <!--Linha 3-->
             <div class="row">
               <div class="col-md-6 col-12">
-                <div class="row">
-                  <div class="col">Qual o seu gasto com conta de luz?</div>
-                </div>
-                <div class="row">
-                  <div class="col"><!--input--></div>
-                </div>
+                <label for="cidade">Cidade</label><br>
+                <input type="text" name="cidade" id="cidade">
               </div>
               <div class="col-md-6 col-12">
-                <div class="row">
-                  <div class="col">CEP</div>
-                </div>
-                <div class="row">
-                  <div class="col"><!--input--></div>
-                </div>
+                <label for="uf">UF</label><br>
+                <select name="uf" id="uf">
+                  <!--Estados-->
+                </select>
               </div>
             </div>
             <!--Linha 4-->
             <div class="row">
               <div class="col">
-                <div class="row">
-                  <div class="col">Endereço</div>
-                </div>
-                <div class="row">
-                  <div class="col"><!--input--></div>
-                </div>
+                <label for="nome">Nome Completo</label><br>
+                <input type="text" name="nome" id="nome"> 
               </div>
             </div>
             <!--Linha 5-->
             <div class="row">
               <div class="col-md-6 col-12">
-                <div class="row">
-                  <div class="col">Qual o seu gasto com conta de luz?</div>
-                </div>
-                <div class="row">
-                  <div class="col"><!--input--></div>
-                </div>
+                <label for="email">Email</label><br>
+                <input type="email" name="email" id="email" >
               </div>
               <div class="col-md-6 col-12">
-                <div class="row">
-                  <div class="col">CEP</div>
-                </div>
-                <div class="row">
-                  <div class="col"><!--input--></div>
-                </div>
+                <label for="cel">Celular</label><br>
+                <input type="tel" name="cel" id="cel">
               </div>
             </div>
             <!--Linha 6-->
             <div class="row">
               <div class="col">
-                <div class="row">
-                  <div class="col-md-6 col-10">Endereço</div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6 col-10"><!--input--></div>
-                  <div class="col-2"><!--Selecionar--></div>
-                </div>
+                <label for="fatura">Fatura da Conta de Luz</label><br>
+                <input type="file" name="fatura" id="fatura"> 
               </div>
             </div>
           </form>
