--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,12 @@
 
       <!--Imagem e texto-->
       <div id="row1" class="row">
-        <img src="/img/Solar.png" class="img-fluid" alt="Imagem responsiva" style="width:100%; border:0;">
-        <div class="centered"><!--texto da imagem--></div>
+        <!--<img src="/img/Solar.png" class="img-fluid" alt="Imagem responsiva" style="width:100%; border:0;">-->
+        <div id="about">
+          <h1>Orçamento</h1>
+          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</p>
+        </div>
+        
       </div>
 
       <!--Formulário e mapa-->
@@ -30,7 +34,7 @@
             <div class="row">
               <div class="col-md-6 col-12">
                 <label for="gasto">Qual o seu gasto com conta de luz?</label><br>
-                <input type="text" name="gasto" id="gasto">
+                <input type="number" name="gasto" id="gasto">
               </div>
               <div class="col-md-6 col-12">
                 <label for="cep">CEP</label><br>
@@ -52,8 +56,35 @@
               </div>
               <div class="col-md-6 col-12">
                 <label for="uf">UF</label><br>
-                <select name="uf" id="uf">
-                  <!--Estados-->
+                <select required name="uf" id="uf">
+                  <option value="" selected>Selecione seu estado</option>
+                  <option value="Acre">Acre</option>
+                  <option value="Alagoas">Alagoas</option>
+                  <option value="Amapá">Amapá</option>
+                  <option value="Amazonas">Amazonas</option>
+                  <option value="Bahia">Bahia</option>
+                  <option value="Ceará">Ceará</option>
+                  <option value="Distrito Federal">Distrito Federal</option>
+                  <option value="Espírito Santo">Espírito Santo</option>
+                  <option value="Goiás">Goiás</option>
+                  <option value="Maranhão">Maranhão</option>
+                  <option value="Mato Grosso">Mato Grosso</option>
+                  <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+                  <option value="Minas Gerais">Minas Gerais</option>
+                  <option value="Pará">Pará</option>
+                  <option value="Paraíba">Paraíba</option>
+                  <option value="Paraná">Paraná</option>
+                  <option value="Pernambuco">Pernambuco</option>
+                  <option value="Piauí">Piauí</option>
+                  <option value="Rio de Janeiro">Rio de Janeiro</option>
+                  <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+                  <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+                  <option value="Rondônia">Rondônia</option>
+                  <option value="Roraima">Roraima</option>
+                  <option value="Santa Catarina">Santa Catarina</option>
+                  <option value="São Paulo">São Paulo</option>
+                  <option value="Sergipe">Sergipe</option>
+                  <option value="Tocantins">Tocantins</option>
                 </select>
               </div>
             </div>
