Imagem funcionando! & submit

--- a/Index.html
+++ b/Index.html
@@ -113,6 +113,8 @@
                 <input type="file" name="fatura" id="fatura"> 
               </div>
             </div>
+            <!--Colocar o recaptcha com margem 30-->
+            <input type="submit" value="Enviar">
           </form>
                     
         </div>
