Versão pronta, codigo organizado

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 
     <title>Proeletrix</title>
   </head>
@@ -15,13 +15,11 @@
     <div class="container-fluid">
 
       <!--Imagem e texto-->
-      <div id="row1" class="row">
-        <!--<img src="/img/Solar.png" class="img-fluid" alt="Imagem responsiva" style="width:100%; border:0;">-->
-        <div id="about">
+      <div id="hero-image" class="row">
+        <div id="hero-text">
           <h1>Orçamento</h1>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</p>
         </div>
-        
       </div>
 
       <!--Formulário e mapa-->
@@ -124,15 +122,15 @@
           <div><!--Google maps--></div>
           <!--Redes sociais-->
           <div class="row">
-            <div class="col-4" style="margin: auto; min-width: 220px;">
+            <div class="col-4" id="link">
               <a href="">
-                <img src="/img/instagram.svg" id="link">
+                <img src="/img/instagram.svg">
               </a>
               <a href="">
-                <img src="/img/facebook.svg" id="link">
+                <img src="/img/facebook.svg">
               </a>
               <a href="">
-                <img src="/img/whatsapp.svg" id="link">
+                <img src="/img/whatsapp.svg">
               </a>
             </div>
           </div>
