--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
       <div class="row" id="contact">
 
         <!--Formulário-->
-        <div class="col-lg-7 col-12">
+        <div class="col-lg-7 col-12" id="formulario">
           <form action="">
             <!--Linha 1-->
             <div class="row">
@@ -118,8 +118,10 @@
         </div>
 
         <!--Mapa-->
-        <div class="col-5">
-          <div><!--Google maps--></div>
+        <div class="col-lg-5 col-12" id="mapa">
+          <div class="map-responsive">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3554.6507759691085!2d-48.62721348570579!3d-27.00959478308598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94d8b79166f4c68f%3A0xe82fcda6f184fed4!2sProeletrix%20Engenharia!5e0!3m2!1spt-BR!2sbr!4v1588972396510!5m2!1spt-BR!2sbr" width="560" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          </div>
           <!--Redes sociais-->
           <div class="row">
             <div class="col-4" id="link">
